crates/tankan/tests/snapshots/corpus_test__svg_state_12-style.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-state" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 108 309" width="108" height="309" role="img" aria-label="State diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 54,34 L 54,84" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 54,127.5 L 54,177.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 54,221 L 54,271" marker-end="url(#tk-arrow)"/>
<circle class="tk-state-dot" cx="54" cy="27" r="7"/>
<rect class="tk-node" x="20" y="84" width="68" height="43.5" rx="6" style="fill:#f9f;stroke:#333"/>
<text class="tk-node-label" x="54" y="108" text-anchor="middle" style="fill:#fff">Active</text>
<rect class="tk-node" x="28" y="177.5" width="52.5" height="43.5" rx="6" style="fill:#bbf;stroke:#666;stroke-dasharray:5 5"/>
<text class="tk-node-label" x="54" y="201.5" text-anchor="middle" style="fill:#1f2328">Idle</text>
<circle class="tk-node" cx="54" cy="280" r="9"/>
<circle class="tk-state-dot" cx="54" cy="280" r="5"/>
</svg>
