crates/tankan/tests/snapshots/corpus_test__svg_state_13-class.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-state" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 131.5 403" width="131.5" height="403" role="img" aria-label="State diagram" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-node { fill: #f6f8fa; stroke: #d1d9e0; }
.tankan .tk-node-line { stroke: #d1d9e0; fill: none; }
.tankan .tk-edge { stroke: #1f2328; fill: none; }
.tankan .tk-head-fill { fill: #1f2328; }
.tankan .tk-head-line { stroke: #1f2328; fill: none; stroke-width: 1.5; }
.tankan .tk-edge-label rect { fill: #ffffff; stroke: none; }
.tankan .tk-cluster { fill: #f6f8fa; fill-opacity: 0.4; stroke: #d1d9e0; }
.tankan .tk-cluster-title { fill: #59636e; }
.tankan .tk-region { fill: none; stroke: #d1d9e0; stroke-dasharray: 4,4; }
.tankan .tk-state-dot { fill: #1f2328; stroke: none; }
.tankan .tk-notebox { fill: #f6f8fa; stroke: #d1d9e0; stroke-dasharray: 3,3; }
</style>
<defs>
<marker id="tk-arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="7" markerHeight="7" orient="auto-start-reverse"><path class="tk-head-fill" d="M0,0 L10,5 L0,10 z"/></marker>
<marker id="tk-circle" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><circle class="tk-head-fill" cx="5" cy="5" r="4"/></marker>
<marker id="tk-cross" viewBox="0 0 10 10" refX="5" refY="5" markerWidth="9" markerHeight="9" orient="auto"><path class="tk-head-line" d="M1,1 L9,9 M9,1 L1,9"/></marker>
</defs>
<path class="tk-edge" d="M 65.5,34 L 65.5,84" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 65.5,127.5 L 65.5,177.5" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 65.5,221 L 65.5,271" marker-end="url(#tk-arrow)"/>
<path class="tk-edge" d="M 65.5,315 L 65.5,365" marker-end="url(#tk-arrow)"/>
<circle class="tk-state-dot" cx="65.5" cy="27" r="7"/>
<rect class="tk-node" x="35.5" y="84" width="60.5" height="43.5" rx="6" style="fill:#eee;stroke:#999"/>
<text class="tk-node-label" x="65.5" y="108" text-anchor="middle" style="fill:#1f2328">Draft</text>
<rect class="tk-node" x="28" y="177.5" width="76" height="43.5" rx="6" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-node-label" x="65.5" y="201.5" text-anchor="middle" style="fill:#111">Review</text>
<rect class="tk-node" x="20" y="271" width="91.5" height="43.5" rx="6" style="fill:#f96;stroke:#333;stroke-width:2px"/>
<text class="tk-node-label" x="65.5" y="295" text-anchor="middle" style="fill:#111">Published</text>
<circle class="tk-node" cx="65.5" cy="374" r="9"/>
<circle class="tk-state-dot" cx="65.5" cy="374" r="5"/>
</svg>
