crates/tankan/tests/snapshots/corpus_test__svg_timeline_05-japanese.snap
---
source: crates/tankan/tests/corpus_test.rs
expression: svg
---
<svg class="tankan tankan-timeline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 420 245" width="420" height="245" role="img" aria-label="yuzu のあゆみ" font-family="sans-serif" font-size="14">
<style>
.tankan text { fill: #1f2328; }
.tankan .tk-title { font-weight: bold; }
.tankan .tk-tl-band { fill-opacity: 0.3; }
.tankan .tk-tl-period { fill-opacity: 0.55; stroke: #d1d9e0; }
.tankan .tk-tl-event { fill-opacity: 0.18; stroke: #d1d9e0; }
.tankan .tk-tl-line { stroke: #d1d9e0; }
.tankan .tk-tl-c0 { fill: var(--tankan-timeline-1, #5778a4); }
.tankan .tk-tl-c1 { fill: var(--tankan-timeline-2, #e49444); }
.tankan .tk-tl-c2 { fill: var(--tankan-timeline-3, #d1615d); }
.tankan .tk-tl-c3 { fill: var(--tankan-timeline-4, #85b6b2); }
.tankan .tk-tl-c4 { fill: var(--tankan-timeline-5, #6a9f58); }
.tankan .tk-tl-c5 { fill: var(--tankan-timeline-6, #e7ca60); }
.tankan .tk-tl-c6 { fill: var(--tankan-timeline-7, #a87c9f); }
.tankan .tk-tl-c7 { fill: var(--tankan-timeline-8, #967662); }
</style>
<text class="tk-title" x="210" y="28" text-anchor="middle">yuzu のあゆみ</text>
<rect class="tk-tl-band tk-tl-c0" x="16" y="43.5" width="188" height="27.5" rx="4"/>
<text class="tk-tl-section" x="110" y="62.5" text-anchor="middle">v0.1</text>
<rect class="tk-tl-band tk-tl-c1" x="216" y="43.5" width="188" height="27.5" rx="4"/>
<text class="tk-tl-section" x="310" y="62.5" text-anchor="middle">v0.5</text>
<line class="tk-tl-line" x1="110" y1="111" x2="110" y2="119"/>
<line class="tk-tl-line" x1="310" y1="111" x2="310" y2="119"/>
<line class="tk-tl-line" x1="310" y1="170" x2="310" y2="178"/>
<rect class="tk-tl-period tk-tl-c0" x="16" y="79" width="188" height="31.5" rx="4"/>
<text class="tk-tl-text" x="110" y="100" text-anchor="middle">2026-07 上旬</text>
<rect class="tk-tl-period tk-tl-c1" x="216" y="79" width="188" height="31.5" rx="4"/>
<text class="tk-tl-text" x="310" y="100" text-anchor="middle">2026-07 中旬</text>
<rect class="tk-tl-event tk-tl-c0" x="16" y="119" width="188" height="71" rx="4"/>
<text class="tk-tl-text" x="110" y="139.5" text-anchor="middle">Markdown から静的サイ</text>
<text class="tk-tl-text" x="110" y="159" text-anchor="middle">トを生成する最初のリリー</text>
<text class="tk-tl-text" x="110" y="178.5" text-anchor="middle">スを公開した</text>
<rect class="tk-tl-event tk-tl-c1" x="216" y="119" width="188" height="51" rx="4"/>
<text class="tk-tl-text" x="310" y="139.5" text-anchor="middle">検索とダイアグラム SSR</text>
<text class="tk-tl-text" x="310" y="159" text-anchor="middle">を大幅に強化した</text>
<rect class="tk-tl-event tk-tl-c1" x="216" y="178" width="188" height="51" rx="4"/>
<text class="tk-tl-text" x="310" y="198.5" text-anchor="middle">ドキュメント運用の改善</text>
<text class="tk-tl-text" x="310" y="218.5" text-anchor="middle">を継続</text>
</svg>
